Mon Feb 18 01:57:31 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * ace/SSL/SSL_Context.cpp:

          Removed what appeared to be extraneous characters '3D'
          from cut and paste.

Sun Feb 17 03:37:42 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/SSL/SSL_Context.h (ACE_SSL_Context): Added a missing comma.
          Thanks to Johnny for reporting this.

Sat Feb 16 21:53:26 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * ace/SSL/SSL_Context.h:

          Fixed missing ',' in enumerated type value.

Sat Feb 16 14:42:54 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * examples/C++NPv2/AIO_Client_Logging_Daemon.cpp: Moved the definition of

          ACE_FACTORY_DEFINE (AIO_CLD, AIO_Client_Logging_Daemon)

          to the right place in the #ifdefs.  Thanks to Journeyer J. Joh
          <oosaprogrammer at gmail dot com> for reporting this.

Sat Feb 16 14:34:30 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/SSL/SSL_Context.cpp (ACE_SSL_Context::set_mode),
        * ace/SSL/SSL_Context.h (ACE_SSL_Context): Added support for TLS
          1.1 and 1.2.  Thanks to pkow88776 at onet dot pl for
          contributing this.

Wed Feb 13 14:29:09 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/platform_vxworks6.7.GNU:

          Removed workaround for RTP shared libraries.  With the current
          updates to VxWorks 6.7, the workaround is not only not needed,
          but it creates RTP executables that will not run on the target.

Fri Feb  8 19:03:33 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

        * ace/Message_Block.cpp:

          Fix Coverity Issue 972919 - Fixed possible dereference
          of null pointer

Fri Feb  8 13:26:17 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * ace/CDR_Stream.h:

          Fix Coverity Issue 972947 - Non virtual destructor. Made
          TAO_InputCDR destructor virtual.
